[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = [] }
log = "0.4.21"
tokio = { version = "1", features = ["full"] }
async-stream = "0.3.5"
futures = "0.3.30"
pin-utils = "0.1.0"
lazy_static = "1.4.0"
rust_decimal = { version = "1.18.0", features = ["serde-bincode"] }
